/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java Library project to get you started.
 * For more details take a look at the Java Libraries chapter in the Gradle
 * User Manual available at https://docs.gradle.org/6.3/userguide/java_library_plugin.html
 */

plugins {
    id 'java'
    id 'eclipse'
}


group 'org.ic4j'
version '0.6.19.7'

sourceCompatibility = 1.8

repositories {
    mavenLocal()
    mavenCentral()
}

jar {
    manifest {
        attributes('Implementation-Title': 'ic4j-agent',
                   'Implementation-Version': project.version)
    }
    
    archiveBaseName = 'ic4j-agent'
}

task fatJar(type: Jar) {
    manifest {
        attributes('Implementation-Title': 'ic4j-agent',
                   'Implementation-Version': project.version)
    }
    
    archiveBaseName = 'ic4j-agent-with-dependencies'
    
    from { configurations.compileClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
    with jar
}

test {
    useJUnitPlatform()
    
    exclude '**/*ICTest*'
    exclude '**/*LoanTest*'
    exclude '**/*TradingTest*'
}

dependencies {
	implementation group: 'org.ic4j', name: 'ic4j-candid', version: '0.6.19.7'
	
	// https://mvnrepository.com/artifact/commons-codec/commons-codec
	implementation group: 'commons-codec', name: 'commons-codec', version: '1.15'
	
	// https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'

	// https://mvnrepository.com/artifact/org.apache.httpcomponents.client5/httpclient5
	implementation group: 'org.apache.httpcomponents.client5', name: 'httpclient5', version: '5.1.4'
	
	// https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp
	implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.10.0'
	
	// https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.14.2'
	
	// https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-jdk8
	implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jdk8', version: '2.14.2'
	
	// https://mvnrepository.com/artifact/com.fasterxml.jackson.dataformat/jackson-dataformat-cbor
	implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-cbor', version: '2.14.2'

	// https://mvnrepository.com/artifact/org.bouncycastle/bcprov-jdk15on
	implementation group: 'org.bouncycastle', name: 'bcprov-jdk15on', version: '1.70'

	// https://mvnrepository.com/artifact/org.bouncycastle/bcpkix-jdk15on
	implementation group: 'org.bouncycastle', name: 'bcpkix-jdk15on', version: '1.70'
	
	// https://mvnrepository.com/artifact/org.slf4j/slf4j-simple
	implementation group: 'org.slf4j', name: 'slf4j-simple', version: '2.0.6'	

	// https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine
	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.9.2'
	
	// https://mvnrepository.com/artifact/org.skyscreamer/jsonassert
	testImplementation group: 'org.skyscreamer', name: 'jsonassert', version: '1.5.1'	
	
	// https://mvnrepository.com/artifact/org.mock-server/mockserver-netty
	testImplementation group: 'org.mock-server', name: 'mockserver-netty', version: '5.11.2'
	
	// https://mvnrepository.com/artifact/org.mock-server/mockserver-junit-rule
	testImplementation group: 'org.mock-server', name: 'mockserver-junit-jupiter', version: '5.11.2'
}

